--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="magazine_name">Magazine Name</string>
     <string name="magazine">Magazine</string>
     <string name="_26_pages">26 Pages</string>
-    <string name="searsh_magazine">Searsh Magazine</string>
+    <string name="searsh_magazine">Search Magazine</string>
     <string name="hellow">Hellow??</string>
 </resources>
