--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">S.H.I.E.L.D</string>
     <string name="cover_description">Cover</string>
-    <string name="ver_detalhes_string">Ver Detalhes</string>
-    <string name="mais_detalhes_na_web">Mais Detalhes na Web</string>
+    <string name="ver_detalhes_string">See Details</string>
+    <string name="mais_detalhes_na_web">More Details</string>
     <string name="_00_00_00_s_20_20">00/00/00 ás 20:20</string>
     <string name="magazine_name">Magazine Name</string>
     <string name="magazine">Magazine</string>
@@ -10,9 +10,9 @@
     <string name="searsh_magazine">Search Magazine</string>
     <string name="hellow">Hellow??</string>
     <string name="comix_title">Comix</string>
-    <string name="like_title">My Liked</string>
-    <string name="msg_liked">Liked</string>
-    <string name="msg_desliked">Desliked</string>
+    <string name="like_title">Favorites</string>
+    <string name="msg_liked">Add Favorites</string>
+    <string name="msg_desliked">Removed Favorites</string>
     <string name="end_list">End List</string>
     <string name="search_something">Enter Something For Search</string>
     <string name="text_search_magazine">search for a magazine</string>
