--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="end_list">End List</string>
     <string name="search_something">Enter Something For Search</string>
     <string name="text_search_magazine">search for a magazine</string>
+    <string name="msg_no_connection">No Conection</string>
 </resources>
