webview layout updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="text_search_magazine">search for a magazine</string>
     <string name="msg_no_connection">No Conection</string>
     <string name="msg_error_magazine_data">Error on Load Magazine Data</string>
+    <string name="label_loading">Loading</string>
 </resources>
